# ZephyrExample

./: CMakeLists.txt
boards/arm/lpcxpresso55s36/: Kconfig.board  Kconfig.defconfig  board.cmake  lpcxpresso55s36-pinctrl.dtsi  lpcxpresso55s36.dts  lpcxpresso55s36.yaml  lpcxpresso55s36_common.dtsi  lpcxpresso55s36_defconfig
boards/arm/lpcxpresso55s36/doc/: index.rst
dts/arm/nxp/: nxp_lpc55S36_ns.dtsi  nxp_lpc55S3x_common.dtsi
dts/nxp/lpc/: LPC55S36JBD100-pinctrl.h  LPC55S36JHI48-pinctrl.h
soc/arm/nxp_lpc/lpc55xxx/: CMakeLists.txt  Kconfig.defconfig.lpc55S36  Kconfig.soc  pinctrl_soc.h  soc.c  soc.h  usb.ld
